# Argus

./: .dockerignore  .gitignore  Makefile  pyproject.toml
.commons/: project.toml
.github/workflows/: ci.yml
bindings/: README.md
bindings/rust/: Cargo.toml
bindings/rust/src/: argusverify.rs  c1.rs  c4.rs  hash.rs  ledger.rs  lib.rs  s10.rs
bindings/typescript/: package-lock.json  package.json  tsconfig.json
db/s10/: 001_quota_ledger.sql  (+2 more)
docs/: Architecture.md  Backlog-and-Interfaces.md  M1_5_PILOT_CONSOLE.md  PRD.md  README.md  Roadmap.md  RoadmapExecution.md  RoadmapStatus.md  TechDesign.md  TestPlan.md
scripts/: apply_s3_migrations.py  apply_s8_migrations.py  argus_s2.py  check.py  generate_bindings.py  generate_s10_gvisor_monitor_config.py  gvisor_security_probe.py  render_observatory_v0.py  roadmap_audit.py  run_m0_spine_battery.py  run_m1_external_referee_battery.py  run_m1_pilot_console_battery.py  run_m1_s2_reference_builder_battery.py  run_s10_egress_battery.py  run_s10_firecracker_battery.py  run_s10_gvisor_battery.py  run_s10_security_monitor_battery.py  run_s1_perf_scale_battery.py  run_s2_perf_latency_battery.py  run_s8_lineage_scale_battery.py  run_s8_read_query_scale_battery.py  s10_cosign_fixture.py  schema_compatibility.py  validate_docs.py  validate_schemas.py
tests/: test_argus_m0_runtime.py  test_argusverify.py  test_c10_contract_schema.py  test_c1_contract_schema.py  test_c1_generated_bindings.py  test_c1_specification_document.py  test_c2_contract_schema.py  test_c2_version_migration.py  test_c3_contract_schema.py  test_c3_tpr1_compatibility.py  test_c4_contract_schema.py  test_c6_contract_schema.py  test_c6_generated_bindings.py  test_ci_workflow.py  test_m0_spine_slice.py  test_m1_external_referee_battery.py  test_m1_pilot_console.py  test_m1_reference_lifecycle_services.py  test_m1_reference_pipeline_image.py  test_m1_reference_sandbox.py  test_m1_runtime_artifacts.py  test_m1_vertical_slice.py  test_roadmap_audit.py  test_s10_audit_ledger.py  test_s10_core.py  test_s10_egress_proxy.py  test_s10_env_sanitization.py  test_s10_firecracker_runtime.py  test_s10_forensic_quarantine.py  test_s10_generated_bindings.py  test_s10_gvisor_runtime.py  test_s10_image_verification.py  test_s10_model_broker.py  test_s10_postgres_quota.py  test_s10_reference_security_pager.py  test_s10_secrets_broker.py  test_s10_security_monitor.py  test_s11_observability.py  test_s12_federation.py  test_s1_conformance_harness.py  (+80 more)
(+132 files in other folders)
