[project]
name = "project-argus"
version = "0.0.0"
description = "Verifier-gated, agent-operated ML foundry for theoretical particle physics workflows."
readme = "docs/README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[tool.project-argus]
roadmap = "docs/Roadmap.md"
backlog = "docs/Backlog-and-Interfaces.md"
test_plan = "docs/TestPlan.md"
