[project]
name = "project-argus"
version = "0.0.0"
description = "Verifier-gated, agent-operated ML foundry for theoretical particle physics workflows."
readme = "docs/README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
  "blake3>=0.4,<2",
  "cryptography>=45,<47",
  "grpcio>=1.64,<2",
  "jsonschema>=4.25,<5",
  "minio>=7.2,<8",
  "optuna>=4.0,<5",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.7,<3",
  "ray[tune]>=2.31,<3"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
argus-subagent = "argus_runtime.s1_subagent_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.project-argus]
roadmap = "docs/Roadmap.md"
backlog = "docs/Backlog-and-Interfaces.md"
test_plan = "docs/TestPlan.md"
