[package]
name = "argus-contracts"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.13"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"

[[bin]]
name = "argus-s8-ledger-writer"
path = "src/bin/s8_ledger_writer.rs"
